Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
       <div>
         <label style="visibility:hidden">.</label>
-        <button id="btnUseBest" class="inline-btn">Use Best</button>
+        <button id="btnUseBest" class="inline-btn btn-green">Use Recommended</button>
       </div>
       <div class="muted" id="compHint" style="min-height:1em"></div>
     </div>
